--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "joi": "^17.6.0",
     "mongoose": "^6.4.3",
     "path": "^0.12.7"
   }
