--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
     "mongoose": "^6.4.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^8.3.2"
   }
 }
